<resources>
    <string name="app_name">La Pintada</string>
    <string name="LaPintada">LA PINTADA</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="cancelar">CANCELAR</string>
    <string name="correo">CORREO</string>
    <string name="usuario">USUARIO</string>
    <string name="InicioSesion">INICIAR SESION</string>
    <string name="faltan_datos">Falta llenar algún dato</string>
    <string name="incorrecto">El usuario o la contraseña no son correctas</string>
    <string name="Confir.contraseña">CONFIRMAR CONTRASEÑA</string>
    <string name="farallones">LOS FARALLONES</string>
    <string name="farallones2">Estos cerros eran conocidos antiguamente como las mamas de caramanta. Ofrecen una gran riqueza paisajística.</string>
    <string name="tituloestacion">ESTACIÓN DEL FERROCARRIL ALEJANDRO LÓPEZ</string>
    <string name="estacion">La estación del ferrocarril data de los principios de la década de los 30 y tuvo una existencia que se remota hasta los años 70; en este sentido el municipio de La Pintada se estructuró en torno al rio y a la estación del ferrocarril, lo cual conllevó una serie de transformaciones en el orden social, urbano y cultural, expresadas en un acelerado crecimiento del corregimiento de La Pintada (estación Alejandro López).</string>
    <string name="titulocerro">CERRO AMARILLO</string>
    <string name="cerro">Este cerro nos brinda una excelente panorámica de la belleza natural de La Pintada. Hace parte de su gran pasado prehistórico, aún se encuentran evidencias de restos cerámicos y petroglifos (dibujos sobre piedras). Es de gran atractivo para las prácticas de parapentismo y caminatas ecológicas.</string>
    <string name="titulopuente">PUENTE NUEVO</string>
    <string name="puente">Se construyó un nuevo puente sobre el río Cauca para remplazar al anterior que era muy inestable. Esta nueva estructura conectó a Antioquia con el sur de Colombia y se constituyó como parte de la vía Panamericana, que cruza el continente desde Alaska hasta la Patagonia.</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="volver">Principal</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulodinastia">HOTEL REAL DINASTIA</string>
    <string name="titulosol">HOTEL SOL PINTADA</string>
    <string name="titulovilla">HOTEL VILLA CAMILA</string>
    <string name="hoteles">Hoteles</string>
    <string name="sitios">Sitios turísticos</string>
    <string name="rest">Restaurantes</string>
    <string name="action_settings">Revisar</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="puerta">La Puerta de Antioquia</string>
    <string name="puerta2">La Puerta De Antioquia  El municipio de La Pintada es relativamente nuevo, fue elevado a la categoría de municipio en el año de 1997. Su ubicación geográfica en el sur del Departamento, lo hace paso obligado hacía y desde el Sur del País, razón por la cual se le denomina “La Puerta de Antioquia”  La Pintada se encuentra ubicada a una altitud de 600 msnm y su temperatura promedio es de 27°C.  La principal fuente hídrica del municipio de La Pintada es el Río Cauca que atraviesa su territorio, dividiendo en dos partes su área urbana, las cuales se unen por medio de dos puentes, dando origen a una belleza paisajista inolvidable para los turistas que lo visitan. En él se práctica el canotaje y en sus riberas se realizan caminatas ecológicas. Además de ello están sus afluentes los ríos Armas, Cartama y Poblanco.  Dentro se la oferta gastronómica de La Pintada encontramos platos típicos de la comida antioqueña, así como diversos platos basados en la preparación de pescados de agua dulce.</string>
    <string name="titulofarallones">LOS FARALLONES</string>
    <string name="titulorosa">ASADOS DOÑA ROSA</string>
    <string name="titulosalpicon">SALPICOLANDIA</string>
    <string name="tituloMonas">ESTADERO LAS MONAS</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titulohistoria">HISTORIA</string>
    <string name="tituloescudo">ESCUDO</string>
    <string name="escudo">El conjunto general, la concepción del escudo es de carácter paisajista eminentemente descriptivo y no simbólico, en el cual se hace una recopilación de las imágenes que nos ofrece la naturaleza y la obra humana primer golpe de vista. Clima, paisaje, conjunto arquitectónico y productos naturales de la región. El único detalle de tipo simbólico es la presencia de la bandera que en la parte inferior aparece en el arco contrapuesto a los colores del arco iris. Paisaje: montañas, farallones, el río cauca, arco iris, y el sol como presencia permanente de nuestro clima. Poblados: como reminiscencia de los primeros tiempos del asentamiento humano. El puente antiguo representativo de la época actual como producto del avance técnico. El nombre del municipio acompañado de su lema igualmente descriptivo, paz, vida, amor, luz y color, como valores positivos que siempre han de estar presentes. Fecha de 1997 comienzo de la vida administrativa y productos naturales, frutas, flores que deben ser la vacación y el compromiso con el ecosistema. La forma rectangular de su parte superior y el arco en la parte inferior, corresponde la clásica figura de un escudo en su forma mas primitiva.</string>
    <string name="bandera">El amarillo significa el oro y la riqueza  El verde significa esperanza y toda la naturaleza que rodea el municipio.</string>
    <string name="titulobandera">BANDERA</string>
</resources>