<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:background="@color/lightyellow"
    tools:context="com.example.jacobo.la_pintada.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:src="@drawable/titulo"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:src="@drawable/lapintada"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:gravity="center"
        android:layout_margin="5dp"
        android:id="@+id/eLUsuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:id="@+id/eLClave"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/InicioSesion"
        android:layout_gravity="center"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:onClick="Inicio"
        android:id="@+id/bLIniciar"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/registrarse"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:clickable="true"
        android:id="@+id/tLRegistrarse"/>

</LinearLayout>
