<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightyellow"
    android:id="@+id/activity_registro"
    tools:context="com.example.jacobo.la_pintada.RegistroActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="158dp"
        android:src="@drawable/lapintada"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:gravity="center"
        android:layout_margin="5dp"
        android:id="@+id/eRUsuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:gravity="center"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:id="@+id/eRClave1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Confir.contraseña"
        android:gravity="center"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:id="@+id/eRClave2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_margin="5dp"
        android:id="@+id/eRCorreo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:onClick="click"
            android:id="@+id/bRAceptar"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:onClick="click"
            android:id="@+id/bRCancelar"/>
    </LinearLayout>
</LinearLayout>
